[package]
name = "ul-api"
version = "0.1.0"
description = "Ledger API for Finternet"
keywords = []
categories = []
include = ["/src", "/benches", "README.md", "LICENSE"]
license = "MIT"
readme = "README.md"
edition = "2021"
rust-version = "1.67"
documentation = "https://docs.rs/ul-api"
repository = "https://github.com/abishekk92/finternet-ul-api"
authors = ["abishekk92 <me@shek.dev>"]
default-run = "ul-api-app"

[lib]
path = "src/lib.rs"
bench = false
doctest = true

[[bin]]
name = "ul-api-app"
path = "src/main.rs"
doc = false
bench = false

[[bin]]
name = "openapi"
path = "src/bin/openapi.rs"
test = false
doc = false
bench = false

[[bench]]
name = "a_benchmark"
harness = false
required-features = ["test_utils"]

[dependencies]
ansi_term = { version = "0.12", optional = true, default-features = false }
anyhow = { version = "1.0", features = ["backtrace"] }
async-trait = "0.1"
axum = { version = "0.6", features = ["headers"] }
axum-tracing-opentelemetry = { version = "0.10", features = ["otlp"] }
base64 = "0.21"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
config = "0.13"
console-subscriber = { version = "0.1", default-features = false, features = [ "parking_lot" ], optional = true }
const_format = "0.2"
futures = "0.3"
headers = "0.3"
http = "0.2"
http-serde = "1.1"
hyper = "0.14"
metrics = "0.20"
metrics-exporter-prometheus = "0.11"
metrics-util = { version = "0.14", default-features = true }
mime = "0.3"
num_cpus = "1.0"
once_cell = "1.14"
openssl = { version = "0.10", features = ["vendored"], default-features = false }
opentelemetry = { version = "0.18", features = ["rt-tokio", "trace"] }
opentelemetry-otlp = { version = "0.11", features = ["metrics", "grpc-tonic", "tls-roots"], default-features = false }
opentelemetry-semantic-conventions = "0.10"
parking_lot = "0.12"
proptest = { version = "1.1", optional = true }
reqwest = { version = "0.11", features = ["json"] }
reqwest-middleware = "0.2"
reqwest-retry = "0.2"
reqwest-tracing = { version = "0.4", features = ["opentelemetry_0_17"] }
retry-policies = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_path_to_error = "0.1"
serde_with = "3.0"
sysinfo = "0.28"
task-local-extensions = "0.1"
thiserror = "1.0"
time = { version = "0.3", features = ["serde-well-known", "serde-human-readable"] }
tokio = { version = "1.26", features = ["full", "parking_lot"] }
## Tied to opentelemetry-otlp dependency
tonic = { version = "0.8" }
tower = "0.4"
tower-http = { version = "0.4", features = ["catch-panic", "request-id", "sensitive-headers", "timeout", "trace", "util"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-opentelemetry = "0.18"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "parking_lot", "registry"] }
ulid = { version = "1.0", features = ["serde"] }
url = "2.3"
utoipa = { version = "3.3", features = ["uuid", "axum_extras"] }
utoipa-swagger-ui = { version = "3.1", features = ["axum"] }

[dev-dependencies]
assert-json-diff = "2.0"
criterion = "0.4"
proptest = "1.1"
rsa = { version = "0.8" }
tokio-test = "0.4"
wiremock = "0.5"

[features]
ansi-logs = ["ansi_term"]
console = ["console-subscriber"]
default = []
test_utils = ["proptest"]

[package.metadata.docs.rs]
all-features = true
# defines the configuration attribute `docsrs`
rustdoc-args = ["--cfg", "docsrs"]

# Speedup build on macOS
# See https://blog.rust-lang.org/2021/03/25/Rust-1.51.0.html#splitting-debug-information
[profile.dev]
split-debuginfo = "unpacked"
